feat: implement getAllCountries
