# internal/country/api.go
@@ -38,7 +38,7 @@ func New(c Config) *API {
 func setRoutes(handler *handler.Handler, router *mux.Router) {
 	r := router.PathPrefix("/v1").Subrouter()
 
-	r.HandleFunc("/country", handler.CreateCountry).Methods("POST")
-	r.HandleFunc("/country/{id}", handler.GetCountryById).Methods("GET")
-	r.HandleFunc("/country", handler.GetCountryByName).Methods("GET")
+	r.HandleFunc("/countries", handler.CreateCountry).Methods("POST")
+	r.HandleFunc("/countries/{id}", handler.GetCountryById).Methods("GET")
+	r.HandleFunc("/countries", handler.GetAllCountries).Methods("GET")
 }
